[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["kirill <gugaevkirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
torch = "^2.5.0"
jupyter = "^1.1.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
tokenizers = "^0.20.1"
datasets = "^3.0.1"
tiktoken = "^0.8.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
